--- a/Kotlin/app/src/main/res/layout/activity_listview.xml
+++ b/Kotlin/app/src/main/res/layout/activity_listview.xml
@@ -40,7 +40,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            app:items="@{items}"
+            android:items="@{items}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
